@@ -543,7 +543,11 @@ typedef union PAGE_HEADER {
     double align;
 } PAGE_HEADER;
 
+#if (SIZEOF_SIZE_T > 4)
+#define BASE_PAGE_SIZE 8000
+#else
 #define BASE_PAGE_SIZE 2000
+#endif
 #define R_PAGE_SIZE (((BASE_PAGE_SIZE - sizeof(PAGE_HEADER)) / sizeof(SEXPREC)) * sizeof(SEXPREC) + sizeof(PAGE_HEADER))
 #define NODE_SIZE(c) ((c) == 0 ? sizeof(SEXPREC) : sizeof(SEXPREC_ALIGN) + NodeClassSize[c] * sizeof(VECREC))
 
@@ -946,7 +950,7 @@ static void GetNewPage(int node_class)
         INIT_REFCNT(s);
         SET_NODE_CLASS(s, node_class);
 #ifdef PROTECTCHECK
-        TYPEOF(s) = NEWSXP;
+        SET_TYPEOF(s, NEWSXP);
 #endif
         base = s;
         R_GenHeap[node_class].Free = s;
@@ -1037,7 +1041,7 @@ static void TryToReleasePages(void)
 static R_INLINE R_size_t getVecSizeInVEC(SEXP s)
 {
     if (IS_GROWABLE(s))
-        SETLENGTH(s, XTRUELENGTH(s));
+        SET_STDVEC_LENGTH(s, XTRUELENGTH(s));
 
     R_size_t size;
     switch (TYPEOF(s))
@@ -1097,25 +1101,11 @@ static void ReleaseLargeFreeVectors()
                 if (node_class == LARGE_NODE_CLASS)
                 {
                     R_LargeVallocSize -= size;
-#ifdef LONG_VECTOR_SUPPORT
-                    if (IS_LONG_VEC(s))
-                        free(((char *)s) - sizeof(R_long_vec_hdr_t));
-                    else
-                        free(s);
-#else
                     free(s);
-#endif
                 }
                 else
                 {
-#ifdef LONG_VECTOR_SUPPORT
-                    if (IS_LONG_VEC(s))
-                        custom_node_free(((char *)s) - sizeof(R_long_vec_hdr_t));
-                    else
-                        custom_node_free(s);
-#else
                     custom_node_free(s);
-#endif
                 }
             }
             s = next;
@@ -1886,7 +1876,7 @@ again:
                 if (TYPEOF(s) != FREESXP)
                 {
                     SETOLDTYPE(s, TYPEOF(s));
-                    TYPEOF(s) = FREESXP;
+                    SET_TYPEOF(s, FREESXP);
                 }
                 if (gc_inhibit_release)
                     FORWARD_NODE(s);
@@ -1910,10 +1900,10 @@ again:
                     if (CHAR(s) != NULL)
                     {
                         R_size_t size = getVecSizeInVEC(s);
-                        SETLENGTH(s, size);
+                        SET_STDVEC_LENGTH(s, size);
                     }
                     SETOLDTYPE(s, TYPEOF(s));
-                    TYPEOF(s) = FREESXP;
+                    SET_TYPEOF(s, FREESXP);
                 }
                 if (gc_inhibit_release)
                     FORWARD_NODE(s);
@@ -2699,14 +2689,15 @@ SEXP allocVector3(SEXPTYPE type, R_xlen_t length, R_allocator_t *allocator)
             VALGRIND_MAKE_MEM_UNDEFINED(DATAPTR(s), actual_size);
 #endif
             s->sxpinfo = UnmarkedNodeTemplate.sxpinfo;
+            SETSCALAR(s, 1);
             SET_NODE_CLASS(s, node_class);
             R_SmallVallocSize += alloc_size;
             /* Note that we do not include the header size into VallocSize,
                but it is counted into memory usage via R_NodesInUse. */
             ATTRIB(s) = R_NilValue;
             SET_TYPEOF(s, type);
-            SET_SHORT_VEC_LENGTH(s, (R_len_t)length); // is 1
-            SET_SHORT_VEC_TRUELENGTH(s, 0);
+            SET_STDVEC_LENGTH(s, (R_len_t)length); // is 1
+            SET_STDVEC_TRUELENGTH(s, 0);
             SET_NAMED(s, 0);
             INIT_REFCNT(s);
             return (s);
@@ -2865,16 +2856,12 @@ SEXP allocVector3(SEXPTYPE type, R_xlen_t length, R_allocator_t *allocator)
             INIT_REFCNT(s);
             SET_NODE_CLASS(s, node_class);
             R_SmallVallocSize += alloc_size;
-            SET_SHORT_VEC_LENGTH(s, (R_len_t)length);
+            SET_STDVEC_LENGTH(s, (R_len_t)length);
         }
         else
         {
             Rboolean success = FALSE;
             R_size_t hdrsize = sizeof(SEXPREC_ALIGN);
-#ifdef LONG_VECTOR_SUPPORT
-            if (length > R_SHORT_LEN_MAX)
-                hdrsize = sizeof(SEXPREC_ALIGN) + sizeof(R_long_vec_hdr_t);
-#endif
             void *mem = NULL; /* initialize to suppress warning */
             if (size < (R_SIZE_T_MAX / sizeof(VECREC)) - hdrsize)
             { /*** not sure this test is quite right -- why subtract the header? LT */
@@ -2896,23 +2883,8 @@ SEXP allocVector3(SEXPTYPE type, R_xlen_t length, R_allocator_t *allocator)
                 }
                 if (mem != NULL)
                 {
-#ifdef LONG_VECTOR_SUPPORT
-                    if (length > R_SHORT_LEN_MAX)
-                    {
-                        s = (SEXP)(((char *)mem) + sizeof(R_long_vec_hdr_t));
-                        SET_SHORT_VEC_LENGTH(s, R_LONG_VEC_TOKEN);
-                        SET_LONG_VEC_LENGTH(s, length);
-                        SET_LONG_VEC_TRUELENGTH(s, 0);
-                    }
-                    else
-                    {
-                        s = mem;
-                        SET_SHORT_VEC_LENGTH(s, (R_len_t)length);
-                    }
-#else
                     s = mem;
-                    SETLENGTH(s, length);
-#endif
+                    SET_STDVEC_LENGTH(s, length);
                     success = TRUE;
                 }
                 else
@@ -2953,9 +2925,10 @@ SEXP allocVector3(SEXPTYPE type, R_xlen_t length, R_allocator_t *allocator)
     else
     {
         GC_PROT(s = allocSExpNonCons(type));
-        SET_SHORT_VEC_LENGTH(s, (R_len_t)length);
+        SET_STDVEC_LENGTH(s, (R_len_t)length);
     }
-    SET_SHORT_VEC_TRUELENGTH(s, 0);
+    SETALTREP(s, 0);
+    SET_STDVEC_TRUELENGTH(s, 0);
     SET_NAMED(s, 0);
     INIT_REFCNT(s);
 
@@ -3636,6 +3609,14 @@ int(REFCNT)(SEXP x)
 {
     return REFCNT(x);
 }
+int(ALTREP)(SEXP x)
+{
+    return ALTREP(x);
+}
+int(IS_SCALAR)(SEXP x, int type)
+{
+    return IS_SCALAR(x, type);
+}
 
 void(SET_ATTRIB)(SEXP x, SEXP v)
 {
@@ -3744,29 +3725,49 @@ int(LENGTH)(SEXP x)
 {
     return x == R_NilValue ? 0 : LENGTH(CHK2(x));
 }
-int(TRUELENGTH)(SEXP x)
-{
-    return TRUELENGTH(CHK2(x));
-}
-void(SETLENGTH)(SEXP x, int v)
-{
-    SETLENGTH(CHK2(x), v);
-}
-void(SET_TRUELENGTH)(SEXP x, int v)
-{
-    SET_TRUELENGTH(CHK2(x), v);
-}
 R_xlen_t(XLENGTH)(SEXP x)
 {
     return XLENGTH(CHK2(x));
 }
-R_xlen_t(XTRUELENGTH)(SEXP x)
+R_xlen_t(TRUELENGTH)(SEXP x)
 {
-    return XTRUELENGTH(CHK2(x));
+    return TRUELENGTH(CHK2(x));
+}
+void(SETLENGTH)(SEXP x, R_xlen_t v)
+{
+    SET_STDVEC_LENGTH(CHK2(x), v);
+}
+void(SET_TRUELENGTH)(SEXP x, R_xlen_t v)
+{
+    SET_TRUELENGTH(CHK2(x), v);
 }
 int(IS_LONG_VEC)(SEXP x)
 {
     return IS_LONG_VEC(CHK2(x));
+}
+#ifdef TESTING_WRITE_BARRIER
+R_xlen_t(STDVEC_LENGTH)(SEXP x)
+{
+    return STDVEC_LENGTH(CHK2(x));
+}
+R_xlen_t(STDVEC_TRUELENGTH)(SEXP x)
+{
+    return STDVEC_TRUELENGTH(CHK2(x));
+}
+#endif
+R_xlen_t ALTREP_LENGTH(SEXP x)
+{
+    return 0;
+}
+R_xlen_t ALTREP_TRUELENGTH(SEXP x)
+{
+    return 0;
+}
+
+/* temporary, to ease transition away from remapping */
+R_xlen_t Rf_XLENGTH(SEXP x)
+{
+    return XLENGTH(x);
 }
 
 const char *(R_CHAR)(SEXP x)
@@ -3780,7 +3781,7 @@ SEXP(STRING_ELT)(SEXP x, R_xlen_t i)
 {
     if (TYPEOF(x) != STRSXP)
         error("%s() can only be applied to a '%s', not a '%s'", "STRING_ELT", "character vector", type2char(TYPEOF(x)));
-    return CHK(STRING_ELT(x, i));
+    return CHK(STRING_PTR(x)[i]);
 }
 
 SEXP(VECTOR_ELT)(SEXP x, R_xlen_t i)
@@ -3789,6 +3790,13 @@ SEXP(VECTOR_ELT)(SEXP x, R_xlen_t i)
     if (TYPEOF(x) != VECSXP && TYPEOF(x) != EXPRSXP && TYPEOF(x) != WEAKREFSXP)
         error("%s() can only be applied to a '%s', not a '%s'", "VECTOR_ELT", "list", type2char(TYPEOF(x)));
     return CHK(VECTOR_ELT(x, i));
+}
+
+void *(STDVEC_DATAPTR)(SEXP x)
+{
+    if (!isVector(x))
+        error("STDVEC_DATAPTR can only be applied to a vector, not a '%s'", type2char(TYPEOF(x)));
+    return STDVEC_DATAPTR(x);
 }
 
 int *(LOGICAL)(SEXP x)
@@ -3850,7 +3858,7 @@ void(SET_STRING_ELT)(SEXP x, R_xlen_t i, SEXP v)
         error(_("attempt to set index %lu/%lu in SET_STRING_ELT"), i, XLENGTH(x));
     FIX_REFCNT(x, STRING_ELT(x, i), v);
     CHECK_OLD_TO_NEW(x, v);
-    STRING_ELT(x, i) = v;
+    STRING_PTR(x)[i] = v;
 }
 
 SEXP(SET_VECTOR_ELT)(SEXP x, R_xlen_t i, SEXP v)
